Compiler/tests/typing/bad/testfile-assign-2.rs

fn main() { let x : i32 = 42; let y : i32 = 89; x = 2; return; }
